<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_my_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bs_baterry_bg">

    <com.zhuoyi.security.batterysave.views.BS_TitleBar
        android:id="@+id/BS_bar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bs_Bar_height"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/bs_margin"
        android:layout_marginRight="@dimen/bs_margin"
        android:gravity="center"
        app:centerTitle="@string/bs_Bar_Middle"
        app:centerTitleColor="@color/bs_TextColor"
        app:centerTitleSize="@dimen/bs_Bar_text_size"
        app:showCenterTitle="true"
        app:showRightIcon="false"/>


    <com.zhuoyi.security.batterysave.views.BS_PrcProgressBar
        android:id="@+id/arcProgressbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bs_prc_height"
        android:layout_below="@id/BS_bar"
        android:layout_marginLeft="@dimen/bs_margin"
        android:layout_marginRight="@dimen/bs_margin"
        android:layout_marginTop="42dp"
        app:chargeDrawable="@drawable/bs_flash"
        />

    <Button
        android:id="@+id/bs_bellow_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bs_activitybutton_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/bs_margin_bottom"
        android:layout_marginLeft="@dimen/bs_margin"
        android:layout_marginRight="@dimen/bs_margin"
        android:background="@drawable/bs_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/bs_bellow_btn"
        android:textColor="@color/bs_TextColor"
        android:textSize="@dimen/bs_card_below_size" />

    <LinearLayout
        android:id="@+id/bs_checking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bs_bellow_btn"
        android:layout_marginBottom="@dimen/bs_checking_margin_bottom"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center">

            <!--<ImageView
                android:id="@+id/bs_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:src="@drawable/bs_loading" />-->
            <ProgressBar
                android:id="@+id/bs_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminateDrawable="@drawable/bs_loading"
                android:indeterminateBehavior="repeat"
                android:indeterminateDuration="1000"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/bs_flash_set" />
        </FrameLayout>

        <TextView
            android:id="@+id/bs_checking_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/bs_checking_text1"
            android:textColor="@color/bs_TextColor"
            android:textSize="@dimen/bs_card_below_size" />

        <TextView
            android:id="@+id/bs_checking_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bs_checking_text2"
            android:textColor="@color/bs_TextColor"
            android:textSize="@dimen/bs_card_below_size" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bs_card_height"
        android:layout_above="@id/bs_bellow_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="@dimen/bs_margin"
        android:layout_marginRight="@dimen/bs_margin"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/app_baterry"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bs_card_bg"
            android:gravity="center"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/app_baterry_img_fl"
                android:layout_width="wrap_content"
                android:clickable="false"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <ImageView
                    android:id="@+id/app_baterry_btn"
                    android:layout_width="wrap_content"
                    android:clickable="false"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bs_app"/>

                <FrameLayout
                    android:id="@+id/app_baterry_nothing_btn"
                    android:layout_width="wrap_content"
                    android:clickable="false"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:src="@drawable/bs_app_nothing" />
                    <TextView
                        android:id="@+id/app_baterry_nothing_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/bs_TextColor"/>
                </FrameLayout>

            </FrameLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/bs_app_baterry"
                android:textColor="@color/bs_TextColor"
                android:textSize="@dimen/bs_card_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ranking_baterry"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bs_card_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ranking_baterry_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/bs_ranking" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/bs_ranking_baterry"
                android:textColor="@color/bs_TextColor"
                android:textSize="@dimen/bs_card_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/switch_baterry"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bs_card_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/switch_baterry_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/bs_baterry_switch" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/bs_switch_baterry"
                android:textColor="@color/bs_TextColor"
                android:textSize="@dimen/bs_card_text_size" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
